fix: increase title height for avoiding truncation
fix #509

--- a/src/css/viewer.css
+++ b/src/css/viewer.css
@@ -313,7 +313,7 @@
   color: #ccc;
   display: inline-block;
   font-size: 12px;
-  line-height: 1;
+  line-height: 1.2;
   margin: 0 5% 5px;
   max-width: 90%;
   opacity: 0.8;
